# Stellara_Contracts

./: CROSS_CONTRACT_PATTERNS.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  I18N_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  PR_CHECKLIST.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  REDIS_CLUSTER_README.md  REDIS_CLUSTER_SUMMARY.md  REDIS_CLUSTER_VERIFICATION.md  TABLE_OF_CONTENTS.md  TESTING_STRATEGY.md  VISUAL_SUMMARY.md  audit-query.dto.ts  audit.controller.ts  audit.entity.ts  audit.interceptor.ts  audit.module.ts  audit.service.ts  collaboration.controller.ts  collaboration.dto.ts  collaboration.gateway.ts  collaboration.interface.ts  collaboration.module.ts  collaboration.service.ts  create-audit-log.dto.ts  create-translation.dto.ts  i18n.controller.ts  i18n.middleware.ts  i18n.module.ts  i18n.service.ts  oracle.rs  property_tests.rs  safe_call.rs  translation.entity.ts
Contracts/: .gitignore  BATCH_OPERATIONS.md  CONTRACTS.md  Cargo.toml  DEPLOYMENT.md  EVENT_INDEXING_PLAN.md  EVENT_SCHEMA.md  EVENT_SCHEMAS.md  GAS_OPTIMIZATION_REPORT.md  GOVERNANCE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEXING_GUIDE.md  INDEXING_GUIDE.md.bak  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PRIVACY_IMPLEMENTATION.md  README.md  SECURITY_ENHANCEMENTS.md  STORAGE_OPTIMIZATION.md  TOKENOMICS_GUIDE.md  UPGRADEABILITY.md  build.sh  test_final_try.txt  validate_gas_optimizations.sh
Contracts/.cargo/: config.toml
Contracts/contract_factory/: Cargo.toml
Contracts/contract_factory/src/: deployer.rs  errors.rs  lib.rs  registry.rs  types.rs
Contracts/contracts/academy/: Cargo.toml  DELIVERY_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  VESTING_DESIGN.md  VESTING_QUICK_REFERENCE.md
Contracts/contracts/academy-rewards/: Cargo.toml
Contracts/contracts/academy-rewards/src/: lib.rs  test.rs
Contracts/contracts/academy/src/: enhanced_gas_bench.rs  gas_bench.rs  lib.rs  regression.rs  storage.rs  vesting.rs
Contracts/contracts/cross_chain_bridge/src/: bridge.rs  lib.rs  security.rs  storage.rs  types.rs
Contracts/contracts/disaster_recovery/src/: circuit_breaker.rs  errors.rs  libs.rs  monitoring.rs  pause_control.rs  recovery.rs  test.rs
Contracts/contracts/governance_token/: Cargo.toml
Contracts/contracts/identity/: Cargo.toml
Contracts/contracts/identity/src/: lib.rs  (+3 more)
Contracts/contracts/privacy_token/: Cargo.toml
Contracts/contracts/privacy_trading/: Cargo.toml
Contracts/contracts/reward_distributor/: Cargo.toml
Contracts/contracts/social_rewards/: Cargo.toml
Contracts/contracts/staking/: Cargo.toml
Contracts/contracts/token/: Cargo.toml
Contracts/contracts/trading/: Cargo.toml
Contracts/contracts/yield_farming/: Cargo.toml
Contracts/cross_chain_bridge/: Cargo.toml
Contracts/cross_chain_bridge/src/: assets.rs  errors.rs  governance.rs  lib.rs  types.rs  verification.rs
Contracts/formal-verification/: IMPLEMENTATION_SUMMARY.md  Makefile  README.md
Contracts/formal-verification/benchmarks/: performance-benchmarks.md
Contracts/formal-verification/ci/: formal-verification.yml
Contracts/formal-verification/proofs/: token-proofs.rs
Contracts/formal-verification/specifications/: token-contract-spec.md  trading-contract-spec.md
Contracts/formal-verification/tools/: kani-config.json  run-verification.sh
Contracts/formal-verification/verification/: Cargo.toml
Contracts/governance/: Cargo.toml
Contracts/governance/src/: lib.rs
Contracts/scripts/: deploy.sh  rollback.sh  upgrade.sh  validate.sh
Contracts/shared/: Cargo.toml
Contracts/shared/src/: events.rs  fees.rs  governance.rs  governance_tests.rs  lib.rs  oracle.rs  privacy.rs  safe_call.rs  state_verification.rs  storage.rs
Contracts/shared/tests/: invariants.rs  utils.rs
Contracts/staking/: Cargo.toml
Contracts/staking/src/: lib.rs
migration_samples/marketplace_service/: Cargo.toml  Dockerfile  build.rs
migration_samples/marketplace_service/src/: main.rs
migration_samples/search/search_service/: Cargo.toml
(+350 files in other folders)
