[workspace]
resolver = "2"
members = [
    "shared",
    "contracts/token",
    "contracts/governance_token",
    "contracts/staking", 
    "contracts/trading",
]

[workspace.dependencies]
soroban-sdk = "20.0.0"

[workspace.metadata.clippy]
# Additional clippy configuration can go here

[workspace.metadata.husky]
hooks = ["pre-commit", "pre-push"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true