[package]
name = "stellara-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
prost-types = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
async-nats = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features=["postgres","runtime-tokio-native-tls","macros"] }

[build-dependencies]
tonic-build = "0.9"
