[package]
name = "trading-verification"
version = "0.1.0"
edition = "2021"
description = "Formal verification proofs for Stellara trading contract"

[dependencies]
kani = "0.50"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[package.metadata.kani.flags]
default-unwind = 4

[profile.dev]
# Keep debug info for Kani
debug = true
