[package]
name = "stellara-search-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","gzip","brotli","stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
